Remove ScrollProgress to separate component; other small changes. 1 Misc:   + Add id to contact section for linking purposes.   + Add link to contact section in TopNav.   + Add link to contact section in ProjectModal.   + Fix footer link spacing. 2 ScrollProgress:   + Refactor to separate component.   + Add to _app.js for use in all pages.

--- a/styles/layout/layout.module.scss
+++ b/styles/layout/layout.module.scss
@@ -31,7 +31,7 @@
     flex-direction: column;
   }
   .social {
-    width: 50%;
+    min-width: 50%;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -49,6 +49,7 @@
   }
   .footerLink {
     min-width: 15% !important;
+    margin-right: var(--space-2xl);
   }
   .design {
     font-family: var(--font-title);
